--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script defer src="js/jquery-2.2.4.min.js"></script>
   <script defer src="js/materialize.min.js"></script>
   <script defer src="js/app.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/materialize.min.css">
